# dofuspoly_backend

./: .gitignore  pyproject.toml  requirements.txt
.github/: dependabot.yml
dofuspoly/: manage.py
dofuspoly/dofuspoly/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
dofuspoly/monopoly/: admin.py  consumers.py  decorators.py  exceptions.py  models.py  realtimes.py  routing.py  serializers.py  urls.py  views.py
dofuspoly/monopoly/fixtures/: monopoly_data.json  player_data.json
dofuspoly/monopoly/migrations/: 0001_initial.py  0002_remove_card_value_alter_card_image_and_more.py  0003_remove_case_houses_ownedcase_player_ownedcase.py  0004_alter_player_cards_alter_player_ownedcase.py  0005_player_image.py  0006_case_position.py  0007_remove_color_price_house.py  0008_remove_case_owner.py  0009_game_dice1values_game_dice2values.py  0010_rename_dice1values_game_dice1value_and_more.py  0011_player_has_rolled.py  0012_alter_game_id_alter_player_id.py  0013_alter_game_id_alter_player_id.py  0014_rename_casetype_spacetype_remove_player_ownedcase_and_more.py  0015_rename_hotel_ownedspace_has_hotel_and_more.py  0016_rename_owned_space_player_owned_spaces.py  0017_game_start_gain_amount.py  0018_remove_game_players_player_game.py  0019_game_jail_fee_amount.py  0020_player_nb_double_rolls.py  0021_remove_player_owned_spaces_ownedspace_player.py  0022_color_nb_spaces.py
dofuspoly/monopoly/models/: __init__.py  card.py  game.py  player.py  space.py
dofuspoly/monopoly/views/: __init__.py  board.py  game.py  player.py
