[project]
name = "dofuspoly-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asgiref==3.11.1",
    "attrs==26.1.0",
    "autobahn==25.12.2",
    "automat==25.4.16",
    "cffi==2.0.0",
    "channels==4.3.2",
    "constantly==23.10.4",
    "cryptography==48.0.0",
    "daphne==4.2.2",
    "django==6.0.6",
    "django-cors-headers==4.9.0",
    "django-filter==25.2",
    "djangorestframework==3.17.1",
    "djangorestframework-simplejwt==5.5.1",
    "djangorestframework-stubs>=3.16.9",
    "hyperlink==21.0.0",
    "idna==3.18",
    "incremental==24.11.0",
    "pillow==12.2.0",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pyjwt==2.13.0",
    "pyopenssl==26.2.0",
    "python-decouple==3.8",
    "service-identity==26.1.0",
    "setuptools==82.0.1",
    "sqlparse==0.5.5",
    "twisted==26.4.0",
    "txaio==25.12.2",
    "typing-extensions==4.15.0",
    "zope-interface==8.5",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.3",
]
